# FWI

./: CHANGELOG.md  FWI_cal.f95  FWI_cal_ERALand_grid_Finial.f95  Makefile  README.md  README.md.old  README.txt  env-lumi-gnu.sh  functions_cal_FWI.py  fwiindices.f95  pyproject.toml  run_fwi.py  run_wildfires_fwi.ipynb  run_wildfires_fwi.py
notebooks/: run_wildfires_fwi.ipynb
src/fwi/: FWI_test_data.csv  __init__.py  add_success_message.py  functions_cal_fwi.py  run_wildfires_fwi.py  test_fwi.py
