[project]
name = "fwi"
version = "2.2.1"
authors = [
  { name="Suraj Polade", email="suraj.polade@fmi.fi" },
]
description = "Fire Weather Index (FWI)"
readme = "README.txt"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy",
  "pandas",
  "xarray",
]

[project.urls]
Homepage = "https://github.com/spolade/FWI"

[project.scripts]
run_wildfires_fwi = "fwi.run_wildfires_fwi:main"
