[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Default versioning behavior, use the version tag from Git
version_scheme = "post-release"
local_scheme = "node-and-date"

[project]
name = "fwi"
dynamic = [
  "version"
]
authors = [
  { name="Suraj Polade", email="suraj.polade@fmi.fi" },
]
description = "Fire Weather Index (FWI)"
readme = "README.txt"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy",
  "pandas",
  "xarray",
]

[project.urls]
Homepage = "https://github.com/spolade/FWI"

[project.scripts]
run_wildfires_fwi = "fwi.run_wildfires_fwi:main"
